aw-crud: fix visual bug when item list is long
- problem: absolute positioning the footer caused list items to visually overlap the footer when the list is long enough to get to that part of the page
- solution: add fixed height on footer and min height on main, then with a 'push' div of footer's height and negative bottom margin on main, the footer will stay at the end of main and push down as the main element grows, fixing the display issue

--- a/aw-crud/style.css
+++ b/aw-crud/style.css
@@ -1,5 +1,7 @@
 html {
     font-family: Arial, Helvetica, sans-serif;
+	height: 100%;
+	margin: 0;
 }
 
 body {
@@ -22,10 +24,13 @@ header h5 {
 main {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	
 	align-items: center;
 	width: 50%;
+	min-height: 80vh;
 	margin: 0 auto;
+	
+	margin-bottom: -50px;
 }
 
 #controls-container {
@@ -117,11 +122,10 @@ main {
 	font-weight: bold;
 }
 
+footer, .push {
+    height: 50px;
+}
 footer {
-    text-align: center;
-	position: absolute;
-	left: 0;
-	right: 0;
-	bottom: 0;
+	text-align: center;
 	padding: 1em;
 }
